# cdp_tests

./: .gitignore  .gitmodules  CMakeLists.txt  cdp_tests.sln
cdp_tests/: Config.cpp  Config.h  Filter.cpp  Filter.h  InputRecorder.cpp  InputRecorder.h  KinectManager.cpp  KinectManager.h  KinectManager_MacOS.cpp  KinectManager_MacOS.h  KinectManager_Recorder.cpp  KinectManager_Recorder.h  KinectManager_Windows.cpp  KinectManager_Windows.h  MainGLWidget.cpp  MainGLWidget.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  OutputTextBrowser.cpp  OutputTextBrowser.h  Pipeline.cpp  Pipeline.h  RecordVideoPushButton.cpp  RecordVideoPushButton.h  cdp_tests.pri  cdp_tests.pro  cdp_tests.vcxproj  cdp_tests.vcxproj.filters  main.cpp  main_window.ui  resources.qrc  vertex.h  window.cpp  window.h
cdp_tests/config/: default.yaml
cdp_tests/filters/: CannyFilter.cpp  CannyFilter.h  ContourFilter.h  ThresholdFilter.cpp  ThresholdFilter.h
cdp_tests/pipeline_tasks/: CollisionMapper.cpp  CollisionMapper.h  ContourDetector.cpp  ContourDetector.h  ContourFilter.cpp  ContourFilter.h  ThresholdFilter.cpp  ThresholdFilter.h
cdp_tests/shaders/: map_view.vert  point_cloud.frag  point_cloud.vert
pytests/: opencv.ipynb
pytests/.ipynb_checkpoints/: opencv-checkpoint.ipynb
